--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>SeleniummotazOO</groupId>
-	<artifactId>taf</artifactId>
+	<artifactId>SeleniumFramworkProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>taf</name>
@@ -112,8 +112,11 @@
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
-
-
+<configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>regressionsuit.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
 
 				</plugin>
 				<plugin>
